--- a/Front/home.html
+++ b/Front/home.html
@@ -1,83 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/Styles/css/style.css">
-    <link  rel="icon"   href="./Assets/Images/logo.png" type="image/png" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Assets/Styles/css/style.css" />
+    <link rel="icon" href="./Assets/Images/logo.png" type="image/png" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Advantage - Data Warehouse</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper d-flex align-items-stretch">
-        <nav id="sidebar" class="active">
-            <img id="sidebarCollapse" class="logotipo" src="./Assets/Images/logo.png" alt="">
-            <h1><a href="index.html" class="logo">M.</a></h1>
-    <ul class="list-unstyled components mb-5">
-      <li class="active">
-        <a href="#"><span class="fa fa-home"></span> Home</a>
-      </li>
-      <li>
-          <a href="#"><span class="fa fa-user"></span> Contactos</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-sticky-note"></span> Compañías</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-cogs"></span> Usuarios</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-paper-plane"></span> Región/Ciudad</a>
-      </li>
-    </ul>
+      <nav id="sidebar" class="active">
+        <img
+          id="sidebarCollapse"
+          class="logotipo"
+          src="./Assets/Images/logo.png"
+          alt=""
+        />
+        <p>Data Warehouse</p>
+        <ul class="list-unstyled components mb-5">
+          <li>
+            <a href="#"><span class="fa fa-address-book"></span> Contactos</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-building-o"></span> Compañías</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-users"></span> Usuarios</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-map"></span>Región/Ciudad</a>
+          </li>
+        </ul>
 
-    <div class="footer">
-        
-    </div>
-    </nav>
+        <div class="footer"></div>
+      </nav>
 
-    <!-- Page Content  -->
-  <div id="content" class="p-4 p-md-5">
+      <!-- Page Content  -->
+      <div id="content" class="p-4 p-md-5">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Busca cualquier cosa"
+                aria-label="Recipient's username"
+                aria-describedby="button-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="button-addon2"
+                >
+                  <i class="fa fa-search"></i>
+                </button>
+              </div>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <!-- <a class="btn btn-primary" href="#" role="button">Link</a> -->
+              <button
+                class="btn btn-primary"
+                type="submit"
+                data-toggle="modal"
+                data-target="#exampleModal"
+              >
+                <i class="fa fa-user-plus"></i>
+              </button>
+              <button class="btn btn-primary" type="submit">
+                <i class="fa fa-download"></i>
+              </button>
+            </div>
+          </div>
+        </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">
+                  Nuevo contacto
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Cerrar
+                </button>
+                <button type="button" class="btn btn-primary">Guardar</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
-        <button type="button" id="" class="btn btn-primary">
-          <i class="fa fa-bars"></i>
-          <span class="sr-only">Toggle Menu</span>
-        </button>
-        <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa fa-bars"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+        <!--tabla-->
+        <h3 class="mb-4">Contactos</h3>
+        <div class="content">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table class="table">
+                        <thead class="text-primary">
+                          <th></th>
+                          <th>Contacto</th>
+                          <th>País/Región</th>
+                          <th>Compañía</th>
+                          <th>Cargo</th>
+                          <th>Canal</th>
+                          <th>Interés</th>
+                          <th>Accion</th>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>
+                              <input type="checkbox" name="" id="">
+                            </td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>Analista</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-info"
+                                  role="progressbar"
+                                  style="width: 50%"
+                                  aria-valuenow="50"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                          <tr>
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>Arquitecto</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-success"
+                                  role="progressbar"
+                                  style="width: 25%"
+                                  aria-valuenow="25"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                          <tr>
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>UX Desihner</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-warning"
+                                  role="progressbar"
+                                  style="width: 75%"
+                                  aria-valuenow="75"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                          <tr>
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>Developer</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-warning"
+                                  role="progressbar"
+                                  style="width: 75%"
+                                  aria-valuenow="75"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                          <tr>
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>Sales</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-danger"
+                                  role="progressbar"
+                                  style="width: 100%"
+                                  aria-valuenow="100"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                          <tr>
+                            <td><input type="checkbox" name="" id=""></td>
+                            <td>Camila soledad</td>
+                            <td>Argentina</td>
+                            <td>Choucair</td>
+                            <td>Analista</td>
+                            <td>Celular</td>
+                            <td class="text-primary">
+                              <div class="progress">
+                                <div
+                                  class="progress-bar bg-success"
+                                  role="progressbar"
+                                  style="width: 25%"
+                                  aria-valuenow="25"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                ></div>
+                              </div>
+                            </td>
+                            <td>***</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-
-    <h2 class="mb-4">Sidebar #07</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
     </div>
     <script src="./JS/jquery.min.js"></script>
     <script src="./JS/popper.js"></script>
     <script src="./JS/bootstrap.min.js"></script>
     <script src="./JS/main.js"></script>
-</body>
+  </body>
 </html>
