Ajustes del front

--- a/Front/login.html
+++ b/Front/login.html
@@ -18,7 +18,7 @@
                 <label class="login-field-icon fui-lock" for="login-pass">Contraseña</label>
                 <input type="password" class="login-field" value="" placeholder="****" id="login-pass">
 
-                <a class="btn" href="">INICIAR SESIÓN</a>
+                <a class="btn" href="./contacts.html">INICIAR SESIÓN</a>
 
                 <div class="signup">
                     <p class="">¿No tienes una cuenta? <a href="" id="signup-link">Registrate aquí</a></p>
